name:                armageddon
version:             0.1.0.0
synopsis:            hogehoge
-- description:
homepage:            https://github.com/githubuser/armageddon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable armageddon
  hs-source-dirs:      app, machinecell-gtk/src, machinecell-webkit/src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , template-haskell
                     , mtl
                     , transformers
                     , text
                     , containers
                     , hashable
                     , hashmap
                     , lens
                     , unagi-chan

                     , transformers-base
                     , monad-control
                     , resourcet
                     , conduit
                     , conduit-extra
                     , machinecell >= 4 && < 5
                     , machinecell-extra

                     , process
                     , directory
                     , filepath
                     , filelock

                     , glib
                     , gtk
                     , webkit

                     , Hastodon

                     , HDBC
                     , HDBC-sqlite3
                     , relational-record
                     , relational-query
                     , relational-query-HDBC

  other-modules:       Graphics.UI.McGtk
                     , Async
                     , AuthDialog
                     , BasicModel
                     , Content
                     , MainForm
                     , DB
                     , DB.Types
                     , DB.Init
                     , DataModel

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/armageddon
